# learn-rust

./: README.md
ch-add-events/today/: Cargo.toml
ch-add-events/today/src/: events.rs  lib.rs
ch-args/events/src/: main.rs
ch-birthday/birthday/: Cargo.toml
ch-birthday/birthday/src/: main.rs
ch-cli/args/src/: main.rs
ch-cli/today/: Cargo.toml
ch-config/today/: Cargo.toml
ch-config/today/src/: lib.rs  main.rs
ch-crates/events/src/: main.rs
ch-csvfile/today/: Cargo.toml  compsci.csv  compsci.txt
ch-csvfile/today/src/: lib.rs
ch-dirs/configdirs/src/: main.rs
ch-dirs/today/: Cargo.toml
ch-enum-match/months/: Cargo.toml
ch-errors/: Cargo.toml  events.txt
ch-errors/src/: main.rs
ch-event-kinds/today/: Cargo.toml
ch-event-kinds/today/src/: events.rs  lib.rs  main.rs
ch-event-kinds/today/src/providers/: csvfile.rs  mod.rs  textfile.rs  web.rs
ch-filters/today/: Cargo.toml
ch-final/today/: Cargo.toml
ch-logging/today/: Cargo.toml
ch-modules/today/: Cargo.toml
ch-providers/today/: Cargo.toml
ch-ref/: Cargo.toml
ch-ref/src/: main.rs
ch-refactoring/today/: Cargo.toml
ch-sorting/today/: Cargo.toml
ch-sqlite/today/: Cargo.toml
ch-testing/events/: Cargo.toml
ch-textfile/today/: Cargo.toml
ch-today/today/: Cargo.toml
ch-today1/today/: Cargo.toml
ch-today1/today/src/: lib.rs
ch-today1/today/src/providers/: csvfile.rs  web.rs
ch-traits/unixtime/: Cargo.toml
ch-web/today/: Cargo.toml
ch-web/today/src/: events.rs  lib.rs
ch-web/today/src/providers/: mod.rs  web.rs
ch-xml/today/: Cargo.toml
(+69 files in other folders)
